# claildesk

./: Cargo.toml  README.md  build.py  entrypoint.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: bridge.yml  build.yml  playground.yml  winget.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
examples/custom_plugin/: Cargo.toml
flutter/: pubspec.yaml
flutter/lib/: common.dart  consts.dart  main.dart
libs/clipboard/: README.md
libs/enigo/: Cargo.toml
libs/hbb_common/: Cargo.toml
libs/portable/: Cargo.toml  generate.py
res/: osx-dist.sh  setup.nsi
res/.devcontainer/: build.sh  devcontainer.json  setup.sh
res/msi/: README.md  preprocess.py
src/: auth_2fa.rs  client.rs  common.rs  core_main.rs  custom_server.rs  flutter.rs  flutter_ffi.rs  ipc.rs  keyboard.rs  lan.rs  lang.rs  main.rs  naming.rs  rendezvous_mediator.rs  server.rs  tray.rs  ui.rs  ui_interface.rs  ui_session_interface.rs  virtual_display_manager.rs
src/client/: io_loop.rs
src/hbbs_http/: account.rs  sync.rs
src/lang/: cn.rs  template.rs
src/platform/: delegate.rs  linux.rs  macos.rs  windows.cc  windows.rs  windows_delete_test_cert.cc
src/plugin/: callback_ext.rs  callback_msg.rs  errno.rs  manager.rs  mod.rs  native.rs  plugins.rs
src/privacy_mode/: win_topmost_window.rs  win_virtual_display.rs
src/server/: connection.rs  dbus.rs  display_service.rs  input_service.rs  portable_service.rs  uinput.rs  video_qos.rs  video_service.rs
vdi/host/: Cargo.toml  README.md
vdi/host/src/: main.rs  server.rs
(+56 files in other folders)
